--- a/resources/assets/sass/modules/popup.scss
+++ b/resources/assets/sass/modules/popup.scss
@@ -76,7 +76,6 @@
     #eventForm{
       align-items: center;
       #innerPopupEventForm{
-      margin: auto;
         display:flex;
       }
       #innerPopupEventSubmit{
