--- a/resources/assets/sass/project/sg-large-form.scss
+++ b/resources/assets/sass/project/sg-large-form.scss
@@ -10,5 +10,3 @@
 	justify-content: center;
 	margin-bottom: 15px;
 }
-
-#eventForm{}
